# src/app.ts
@@ -10,6 +10,7 @@ import categoryAdminRouter from "./modules/category/category.routes.admin";
 import categoryCoreRouter from "./modules/category/category.routes.core";
 import messageAdminRouter from "./modules/message/message.routes.admin";
 import messageCoreRouter from "./modules/message/message.routes.core";
+import productAdminRouter from "./modules/product/product.routes.admin";
 import { setupSwagger } from "./swagger/swagger";
 
 const app = express();
@@ -29,13 +30,16 @@ app.use("/api/auth", authRouter);
 app.use("/api/admin/banner", bannerAdminRouter);
 app.use("/api/banner", bannerCoreRouter);
 
+// ! Category
+app.use("/api/admin/category", categoryAdminRouter);
+app.use("/api/category", categoryCoreRouter);
+
 // ! Message
 app.use("/api/admin/message", messageAdminRouter);
 app.use("/api/message", messageCoreRouter);
 
-// ! Category
-app.use("/api/admin/category", categoryAdminRouter);
-app.use("/api/category", categoryCoreRouter);
+// ! Product
+app.use("/api/admin/product", productAdminRouter);
 
 // ! Error Handler
 app.use(errorHandler);
