# src/swagger/modules/product.modules.yaml
@@ -1,9 +1,9 @@
 paths:
-  /admin/banner/list:
+  /admin/product/list:
     get:
       tags:
-        - Admin => Banner
-      summary: Get list of banners
+        - Admin => Product
+      summary: Get list of products
       security:
         - BearerAuth: []
       parameters:
@@ -17,18 +17,18 @@ paths:
         "403":
           $ref: "#/components/responses/NotAllowed"
 
-  /admin/banner:
+  /admin/product:
     post:
       tags:
-        - Admin => Banner
-      summary: Create a new banner
+        - Admin => Product
+      summary: Create a new products
       security:
         - BearerAuth: []
       requestBody:
         content:
           multipart/form-data:
             schema:
-              $ref: "#/components/schemas/CreateBanner"
+              $ref: "#/components/schemas/CreateProduct"
       responses:
         "201":
           $ref: "#/components/responses/Created"
@@ -39,11 +39,11 @@ paths:
         "403":
           $ref: "#/components/responses/NotAllowed"
 
-  /admin/banner/{id}:
+  /admin/category/{id}:
     put:
       tags:
-        - Admin => Banner
-      summary: Update existing banner
+        - Admin => Product
+      summary: Update existing products
       security:
         - BearerAuth: []
       parameters:
@@ -56,7 +56,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: "#/components/schemas/UpdateBanner"
+              $ref: "#/components/schemas/UpdateProduct"
       responses:
         "200":
           $ref: "#/components/responses/Success"
@@ -71,8 +71,8 @@ paths:
 
     delete:
       tags:
-        - Admin => Banner
-      summary: Delete banner by id
+        - Admin => Product
+      summary: Delete products by id
       security:
         - BearerAuth: []
       parameters:
@@ -92,12 +92,27 @@ paths:
           $ref: "#/components/responses/UnAuthorized"
         "403":
           $ref: "#/components/responses/NotAllowed"
-
-  /banner/list:
+    
     get:
       tags:
-        - Banner
-      summary: Get list of banners
+        - Admin => Product
+      summary: Get product by id
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         "200":
           $ref: "#/components/responses/Success"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "401":
+          $ref: "#/components/responses/UnAuthorized"
+        "403":
+          $ref: "#/components/responses/NotAllowed"
